# hindsight-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: client.rs  error.rs  lib.rs  models.rs
tests/: integration.rs
