[package]
name = "hindsight-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
