[package]
name = "hindsight-client"
version = "0.1.1"
edition = "2021"
authors = ["elcoosp"]                # <-- add this
license = "MIT"                       # <-- add this
repository = "https://github.com/elcoosp/hindsight-client"
description = "Rust HTTP client for the Hindsight agent memory system"
[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
